--- a/index.html
+++ b/index.html
@@ -159,83 +159,83 @@
           <div class="portfolio-block">
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 1"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 2"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 3"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 4"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 5"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 6"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 7"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 8"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
             <div class="portfolio-item">
               <a
-                href="/img/ace-cream.jpg"
+                href="./img/ice-cream.jpg"
                 data-lightbox="image-1"
                 data-title="Portfolio 9"
               >
-                <img src="/img/ace-cream.jpg" />
+                <img src="./img/ice-cream.jpg" />
               </a>
             </div>
           </div>
@@ -280,22 +280,22 @@
                   <div class="social-links">
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>Facebook</span></a
+                        ><img src="./img/fb.png" /><span>Facebook</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/tw.png" /><span>Twitter</span></a
+                        ><img src="./img/tw.png" /><span>Twitter</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>LinkedIn</span></a
+                        ><img src="./img/fb.png" /><span>LinkedIn</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/ist.png" /><span>Instagram</span></a
+                        ><img src="./img/ist.png" /><span>Instagram</span></a
                       >
                     </div>
                   </div>
@@ -304,7 +304,10 @@
             </div>
             <div class="team-item bottom-green">
               <label for="david-kramer">
-                <img src="/img/mus-3.jpg" style="width: 100%; height: 270px;" />
+                <img
+                  src="./img/mus-3.jpg"
+                  style="width: 100%; height: 270px;"
+                />
                 <span class="team-name">David Krämer</span>
                 <span class="team-spec">Lead Developer</span>
               </label>
@@ -326,22 +329,22 @@
                   <div class="social-links">
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>Facebook</span></a
+                        ><img src="./img/fb.png" /><span>Facebook</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/tw.png" /><span>Twitter</span></a
+                        ><img src="./img/tw.png" /><span>Twitter</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>LinkedIn</span></a
+                        ><img src="./img/fb.png" /><span>LinkedIn</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/ist.png" /><span>Instagram</span></a
+                        ><img src="./img/ist.png" /><span>Instagram</span></a
                       >
                     </div>
                   </div>
@@ -350,7 +353,10 @@
             </div>
             <div class="team-item bottom-purple">
               <label for="anna-schroder">
-                <img src="/img/mus-2.jpg" style="width: 100%; height: 270px;" />
+                <img
+                  src="./img/mus-2.jpg"
+                  style="width: 100%; height: 270px;"
+                />
                 <span class="team-name">Anna Schröder</span>
                 <span class="team-spec">Designer</span>
               </label>
@@ -372,22 +378,22 @@
                   <div class="social-links">
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>Facebook</span></a
+                        ><img src="./img/fb.png" /><span>Facebook</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/tw.png" /><span>Twitter</span></a
+                        ><img src="./img/tw.png" /><span>Twitter</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>LinkedIn</span></a
+                        ><img src="./img/fb.png" /><span>LinkedIn</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/ist.png" /><span>Instagram</span></a
+                        ><img src="./img/ist.png" /><span>Instagram</span></a
                       >
                     </div>
                   </div>
@@ -396,7 +402,10 @@
             </div>
             <div class="team-item bottom-orange">
               <label for="jason-teichmann">
-                <img src="/img/mus-1.jpg" style="width: 100%; height: 270px;" />
+                <img
+                  src="./img/mus-1.jpg"
+                  style="width: 100%; height: 270px;"
+                />
                 <span class="team-name">Jason Teichmann</span>
                 <span class="team-spec">Consultant</span>
               </label>
@@ -418,22 +427,22 @@
                   <div class="social-links">
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>Facebook</span></a
+                        ><img src="./img/fb.png" /><span>Facebook</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/tw.png" /><span>Twitter</span></a
+                        ><img src="./img/tw.png" /><span>Twitter</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/fb.png" /><span>LinkedIn</span></a
+                        ><img src="./img/fb.png" /><span>LinkedIn</span></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="/img/ist.png" /><span>Instagram</span></a
+                        ><img src="./img/ist.png" /><span>Instagram</span></a
                       >
                     </div>
                   </div>
