--- a/index.html
+++ b/index.html
@@ -427,22 +427,30 @@
                   <div class="social-links">
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="./img/fb.png" /><span>Facebook</span></a
+                        ><img src="./img/fb.png" alt="facebook" /><span
+                          >Facebook</span
+                        ></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="./img/tw.png" /><span>Twitter</span></a
+                        ><img src="./img/tw.png" alt="twitter" /><span
+                          >Twitter</span
+                        ></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="./img/fb.png" /><span>LinkedIn</span></a
+                        ><img src="./img/fb.png" alt="linkedin" /><span
+                          >LinkedIn</span
+                        ></a
                       >
                     </div>
                     <div class="team-social-item">
                       <a href=""
-                        ><img src="./img/ist.png" /><span>Instagram</span></a
+                        ><img src="./img/ist.png" alt="instagram" /><span
+                          >Instagram</span
+                        ></a
                       >
                     </div>
                   </div>
